# evi4pkt

./: .gitignore  README.md  REPRODUCE.md  pyproject.toml
data/metadata/: q_matrix.csv
data/splits/: README.md
data/splits/f19/: seed_0.json  (+9 more)
docs/: ablation_ladder.md  experiment_protocol.md  s19_pipeline.md
evipkt/: __init__.py  akt.py  akt_runner.py  code2vec_features.py  code_evidence.py  code_misused_rules.py  codebert_features.py  csedm_io.py  dataset.py  device.py  dkt.py  dkvmn.py  dkvmn_runner.py  error_evidence.py  error_evidence_filter.py  error_mechanism.py  evidence_adapter.py  evidence_v8.py  feature_modes.py  iice_lite.py  iice_lite_dataset.py  iice_lite_runner.py  kc_catalog.py  kcgen_kt_lite.py  kcgen_kt_lite_runner.py  kt_runner_common.py  labels.py  plugplay_evidence.py  preprocess.py  process_evidence.py  q_matrix.py  qdkt.py  qdkt_runner.py  qikt.py  qikt_runner.py  runner.py  sakt.py  sakt_runner.py  sequence_dataset.py  simplekt.py  (+5 more)
scripts/: build_ablation_plan_table.py  build_classic_pkt_summary.py  build_code2vec_cache_f19.py  build_codebert_cache_f19.py  build_eight_backbone_plugplay_table.py  build_repro_bundle.py  enrich_framework_logs_error_mechanism.py  enrich_framework_logs_process.py  enrich_rule_based.sh  export_student_splits.py  preprocess_csedm.py  run_ablation_ladder.py  run_classic_pkt_f19_s19.py  run_repro_eight_backbone.sh  run_repro_s19_preprocess.sh
supplementary/: DATA_ACCESS.md  evidence_schema.md  filtering_rules.md  framework_log_sample.json  kc_catalog.md
tests/: test_code2vec_features.py  test_repro_smoke.py
(+10 files in other folders)
